kubernetes/apps/media/grimmory/app/httproute-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grimmory-envoy
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "grimmory.${HOME_DOMAIN}"
  rules:
  - backendRefs:
    - name: grimmory
      port: 6060
